--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "o2r-dataserve",
+  "name": "o2r-contentbutler",
   "version": "1.0.0",
   "description": "Node.js implementation of the `/api/v1/compendium/:id/data` and `/api/v1/job/:id/data` resources in the [o2r web api](http://o2r.info/o2r-web-api).",
   "main": "index.js",
@@ -9,14 +9,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/o2r-project/o2r-dataserve.git"
+    "url": "git+https://github.com/o2r-project/o2r-contentbutler.git"
   },
   "author": "o2r project",
   "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/o2r-project/o2r-dataserve/issues"
+    "url": "https://github.com/o2r-project/o2r-contentbutler/issues"
   },
-  "homepage": "https://github.com/o2r-project/o2r-dataserve#readme",
+  "homepage": "https://github.com/o2r-project/o2r-contentbutler#readme",
   "dependencies": {
     "debug": "^2.2.0",
     "express": "^4.14.0",
