--- a/package.json
+++ b/package.json
@@ -22,5 +22,10 @@
     "express": "^4.14.0",
     "fs-extra": "^0.30.0",
     "mongoose": "^4.5.5"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^2.5.3",
+    "request": "^2.74.0"
   }
 }
