testing o2r-muncher in docker

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,13 @@
+sudo: required
 language: node_js
 node_js:
   - "6"
 services:
   - mongodb
+  - docker
+before_install:
+  - docker pull o2rproject/o2r-muncher
+  - docker run -d -p 127.0.0.1:8080:8080 o2rproject/o2r-muncher
 install:
   - npm install
   - npm install -g mocha
