--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ services:
   - mongodb
   - docker
 before_install:
+  - sudo apt-get -qq update
+  - sudo apt-get install -y mongodb
   - docker pull o2rproject/o2r-muncher
   - docker run -d -p 127.0.0.1:8080:8080 o2rproject/o2r-muncher
 install:
