--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,7 @@ node_js:
 services:
   - docker
 env:
-  - MUNCHER_BASEPATH=/tmp/muncher
-  - CONTENTBUTLER_BASEPATH=/tmp/muncher
+  - MUNCHER_BASEPATH=/tmp/muncher CONTENTBUTLER_BASEPATH=/tmp/muncher
 before_install:
   - export MUNCHER_MONGODB=mongodb://$(cat /etc/hostname)/
   - echo $MUNCHER_MONGODB
