--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,9 @@
 ---
-sudo: required
 language: node_js
 node_js:
   - "6"
 services:
-  - docker
-env:
-  - MUNCHER_BASEPATH=/tmp/muncher CONTENTBUTLER_BASEPATH=/tmp/muncher
-before_install:
-  - export MUNCHER_MONGODB=mongodb://$(cat /etc/hostname)/
-  - echo $MUNCHER_MONGODB
-  - sudo apt-get -qq update
-  - sudo apt-get install -y mongodb
-  - docker pull o2rproject/o2r-muncher
-  - docker run -d -p 127.0.0.1:8080:8080 -v $MUNCHER_BASEPATH:$MUNCHER_BASEPATH o2rproject/o2r-muncher
+  - mongodb
 install:
   - npm install
   - npm install -g mocha
