--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
     depends_on:
       - db
     volumes:
-      - data:/tmp/muncher
+      - data:/tmp/o2r
     environment:
       - CONTENTBUTLER_MONGODB=mongodb://db/
       - CONTENTBUTLER_PORT=8081
