--- a/package.json
+++ b/package.json
@@ -20,10 +20,14 @@
   },
   "homepage": "https://github.com/o2r-project/o2r-contentbutler#readme",
   "dependencies": {
+    "compression": "^1.6.2",
+    "connect-mongodb-session": "^1.1.1",
     "debug": "^2.2.0",
     "express": "^4.14.0",
+    "express-session": "^1.14.0",
     "fs-extra": "^0.30.0",
-    "mongoose": "^4.5.5"
+    "mongoose": "^4.5.5",
+    "passport": "^0.3.2"
   },
   "devDependencies": {
     "chai": "^3.5.0",
