--- a/Dockerfile.local
+++ b/Dockerfile.local
@@ -41,3 +41,5 @@ RUN npm install --production
 
 ENTRYPOINT ["/sbin/dumb-init", "--"]
 CMD ["npm", "start" ]
+
+# docker build --tag contentbutler -f Dockerfile.local --no-cache .
