--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-session": "^1.14.0",
     "fs-extra": "^0.30.0",
     "mongoose": "^4.5.5",
+    "mongoose-timestamp": "^0.6.0",
     "passport": "^0.3.2"
   },
   "devDependencies": {
