--- a/Dockerfile.local
+++ b/Dockerfile.local
@@ -1,4 +1,4 @@
-# (C) Copyright 2016 The o2r project. https://o2r.info
+# (C) Copyright 2017 o2r project. https://o2r.info
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -12,24 +12,20 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-FROM alpine:3.4
+FROM alpine:3.6
 MAINTAINER o2r-project, https://o2r.info
+
+RUN echo "http://dl-cdn.alpinelinux.org/alpine/edge/testing" > /etc/apk/repositories \
+  && echo "http://dl-cdn.alpinelinux.org/alpine/edge/community" >> /etc/apk/repositories \
+  && echo "http://dl-cdn.alpinelinux.org/alpine/edge/main" >> /etc/apk/repositories
 
 RUN apk add --no-cache \
     nodejs \
+    dumb-init \
+    nodejs-npm \
     imagemagick \
-    git \
     ca-certificates \
-    wget \
   && update-ca-certificates \
-  #&& git clone --depth 1 -b master https://github.com/o2r-project/o2r-contentbutler /contentbutler \
-  && wget -O /sbin/dumb-init https://github.com/Yelp/dumb-init/releases/download/v1.2.0/dumb-init_1.2.0_amd64 \
-  && chmod +x /sbin/dumb-init \
-  && apk del \
-    git \
-    ca-certificates \
-    wget \
-  && rm -rf /var/cache
 
 WORKDIR /contentbutler
 COPY config config
