--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,27 @@
 ---
+sudo: required
 language: node_js
 node_js:
   - "6"
+  - "7"
+  - "8"
 services:
   - mongodb
+  - docker
+cache:
+  directories:
+    - "node_modules"
+before_install:
+  - docker --version
+  - docker pull o2rproject/o2r-loader:latest
+  - docker pull mongo:3.4
 install:
   - npm install
   - npm install -g mocha
 before_script:
-  - npm start &
+  - npm start
+  - docker run --name mongodb mongo:3.4
+  - docker run --name testloader -d -p 8088:8088 --link mongodb:mongodb -e LOADER_MONGO=mongodb://mongodb:27017 o2rproject/o2r-loader:latest
   - sleep 10
 script:
   - mocha
