--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ install:
   - npm install -g mocha
 before_script:
   - npm start
-  - docker run --name mongodb mongo:3.4
+  - docker run --name mongodb -d mongo:3.4
   - docker run --name testloader -d -p 8088:8088 --link mongodb:mongodb -e LOADER_MONGO=mongodb://mongodb:27017 o2rproject/o2r-loader:latest
   - sleep 10
 script:
