--- a/.travis.yml
+++ b/.travis.yml
@@ -20,10 +20,11 @@ install:
 before_script:
   - npm start
   - docker run --name mongodb -d -p 27017:27017 mongo:3.4
-  - docker run --name testloader -d -p 8088:8088 --link mongodb:mongodb -e LOADER_MONGO=mongodb://mongodb:27017 o2rproject/o2r-loader:latest
+  - docker run --name testloader -d -p 8088:8088 --link mongodb:mongodb -e LOADER_MONGODB=mongodb://mongodb:27017 o2rproject/o2r-loader:latest
   - sleep 10
 script:
   - mocha
 after_script:
+  - sleep 5
   #- docker logs mongodb
   - docker logs testloader
