--- a/.travis.yml
+++ b/.travis.yml
@@ -14,12 +14,16 @@ before_install:
   - docker --version
   - docker pull o2rproject/o2r-loader:latest
   - docker pull mongo:3.4
+install:
+  - npm install
   - npm install -g mocha
 before_script:
   - docker run --name mongodb -d -p 27017:27017 mongo:3.4
   - docker run --name testloader -d -p 8088:8088 --link mongodb:mongodb -e LOADER_MONGODB=mongodb://mongodb:27017 -e DEBUG=* o2rproject/o2r-loader:latest
   - sleep 10
-  - export DEBUG=*
+script:
+  - DEBUG=* npm start &
+  - DEBUG=* npm test
 after_script:
   - sleep 5
   #- docker logs mongodb
