use same storage dir for loader and contentbutler on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,10 +19,10 @@ install:
   - npm install -g mocha
 before_script:
   - docker run --name mongodb -d -p 27017:27017 mongo:3.4
-  - docker run --name testloader -d -p 8088:8088 --link mongodb:mongodb -e LOADER_MONGODB=mongodb://mongodb:27017 -e DEBUG=* o2rproject/o2r-loader:latest
+  - docker run --name testloader -d -p 8088:8088 --link mongodb:mongodb -v $HOME:/tmp/o2r -e LOADER_MONGODB=mongodb://mongodb:27017 -e DEBUG=* o2rproject/o2r-loader:latest
   - sleep 10
 script:
-  - DEBUG=* npm start &
+  - DEBUG=contentbutler,contentbutler:* CONTENTBUTLER_BASEPATH=$HOME npm start &
   - DEBUG=* npm test
 after_script:
   - sleep 5
